--- a/src/output.css
+++ b/src/output.css
@@ -578,6 +578,10 @@ video {
   margin: auto;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mb-28 {
   margin-bottom: 7rem;
 }
@@ -588,6 +592,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
 }
 
 .flex {
@@ -618,16 +626,12 @@ video {
   height: 24rem;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
-}
-
 .w-2\/5 {
   width: 40%;
 }
 
-.w-20 {
-  width: 5rem;
+.w-24 {
+  width: 6rem;
 }
 
 .w-52 {
@@ -636,6 +640,14 @@ video {
 
 .w-9\/12 {
   width: 75%;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-98\% {
+  width: 98%;
 }
 
 .items-center {
@@ -662,16 +674,16 @@ video {
   gap: 0.25rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-9 {
@@ -690,9 +702,8 @@ video {
   border-radius: 0.375rem;
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+.border {
+  border-width: 1px;
 }
 
 .bg-green-500 {
@@ -702,6 +713,16 @@ video {
 
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.from-slate-900 {
+  --tw-gradient-from: #0f172a var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(15 23 42 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-gray-600 {
+  --tw-gradient-to: #4b5563 var(--tw-gradient-to-position);
 }
 
 .p-7 {
